--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "mongoose": "^8.3.4",
+    "moralis": "^2.27.2",
     "next": "13.4.7",
     "next-seo": "^6.1.0",
     "nodemon": "^3.1.9",
@@ -74,7 +75,8 @@
     "tailwindcss": "3.3.2",
     "typescript": "4.9.5",
     "validator": "^13.11.0",
-    "wagmi": "^0.12.1"
+    "wagmi": "^0.12.1",
+    "web3": "^4.16.0"
   },
   "devDependencies": {
     "@types/numeral": "^2.0.2",
