--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cloudinary": "^2.2.0",
     "concurrently": "^8.2.2",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dayjs": "^1.11.9",
     "dotenv": "^16.4.5",
     "eslint": "8.44.0",
